fixed title not showing up in mobile

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -24,7 +24,7 @@ body {
   color: #fff;
   text-align: center;
   h1 {
-    font-size: 600%;
+    font-size: 500%;
     font-weight: bold;
     -webkit-animation: floating-text 2s ease alternate infinite;
     -moz-animation: floating-text 2s ease alternate infinite;
